01-devtest/nordmart/dev/stakater-nordmart-cart.yaml
---
# Source: helm/charts/application/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cart
    appVersion: "v0.0.34"
    group: com.stakater.platform
    provider: stakater
    team: stakater
    chart: "application-0.0.29"
    release: "stakater-nordmart-cart"
    heritage: "Helm"
  name: cart
spec:
  selector:
    app: cart
  ports:
    - name: https
      port: 8080
      targetPort: 8080
---
# Source: helm/charts/application/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cart
    appVersion: "v0.0.34"
    group: com.stakater.platform
    provider: stakater
    team: stakater
    chart: "application-0.0.29"
    release: "stakater-nordmart-cart"
    heritage: "Helm"
    appCategory: backend
  annotations: 
    reloader.stakater.com/auto: "true"
  name: cart
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: cart
    spec:      
      imagePullSecrets:
      - name: nexus-creds
      containers:
      - name: cart
        image: "nexus-docker-openshift-stakater-nexus.apps.binero.06p407u4.kubeapp.cloud/repository/docker/stakater-nordmart-cart:v0.0.34"
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
          initialDelaySeconds: 90
          httpGet:
            path: /health
            port: 8080
        readinessProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
          initialDelaySeconds: 90
          httpGet:
            path: /health
            port: 8080
        resources:
          limits:
            memory: 1Gi
            cpu: 0.5
          requests:
            memory: 128Mi
            cpu: 0.1
      serviceAccountName: cart
