01-devtest/nordmart/dev/stakater-nordmart-catalog.yaml
---
# Source: helm/charts/application/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: catalog
    appVersion: "v0.0.26"
    group: com.stakater.platform
    provider: stakater
    team: stakater
    chart: "application-0.0.29"
    release: "stakater-nordmart-catalog"
    heritage: "Helm"
  name: catalog
spec:
  selector:
    app: catalog
    app: catalog
  ports:
    - name: https
      port: 8080
---
# Source: helm/charts/mysql/templates/master-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: stakater-nordmart-catalog-mysql
  labels:
    app: mysql
    chart: mysql-7.1.0
    release: stakater-nordmart-catalog
    heritage: Helm
    component: master
  annotations:
    prometheus.io/port: '9104'
    prometheus.io/scrape: "true"
spec:
  type: ClusterIP
  ports:
    - name: mysql
      port: 3306
      targetPort: mysql
      nodePort: null
  selector:
    app: mysql
    release: stakater-nordmart-catalog
    component: master
---
# Source: helm/charts/application/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: catalog
    appVersion: "v0.0.26"
    group: com.stakater.platform
    provider: stakater
    team: stakater
    chart: "application-0.0.29"
    release: "stakater-nordmart-catalog"
    heritage: "Helm"
    appCategory: backend
  annotations: 
    reloader.stakater.com/auto: "true"
  name: catalog
spec:
  replicas: 2
  selector:
    matchLabels:
      app: catalog
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: catalog
        app: catalog
    spec:
      containers:
      - name: catalog
        image: "nexus.openshift-stakater-nexus.svc.cluster.local:5003/repository/docker/stakater-nordmart-catalog:v0.0.26"
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          periodSeconds: 60
          successThreshold: 1
          timeoutSeconds: 1
          initialDelaySeconds: 10
          httpGet:
            path: /actuator/health
            port: 8080
        readinessProbe:
          failureThreshold: 3
          periodSeconds: 60
          successThreshold: 1
          timeoutSeconds: 1
          initialDelaySeconds: 10
          httpGet:
            path: /actuator/health
            port: 8080
        resources:
          limits:
            memory: 256Mi
            cpu: 0.5
          requests:
            memory: 128Mi
            cpu: 0.1
      serviceAccountName: catalog
---
# Source: helm/charts/mysql/templates/master-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: stakater-nordmart-catalog-mysql-master
  labels:
    app: mysql
    chart: mysql-7.1.0
    release: stakater-nordmart-catalog
    heritage: Helm
    component: master
spec:
  selector:
    matchLabels:
      app: mysql
      release: stakater-nordmart-catalog
      component: master
  serviceName: stakater-nordmart-catalog-mysql-master
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: mysql
        chart: mysql-7.1.0
        release: stakater-nordmart-catalog
        heritage: Helm
        component: master
    spec:      
      serviceAccountName: stakater-nordmart-catalog-mysql
      containers:
        - name: mysql
          image: docker.io/bitnami/mysql:8.0.22-debian-10-r23
          imagePullPolicy: "IfNotPresent"
          ports:
            - name: mysql
              containerPort: 3306
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - |
                  password_aux="${MYSQL_ROOT_PASSWORD:-}"
                  if [ -f "${MYSQL_ROOT_PASSWORD_FILE:-}" ]; then
                      password_aux=$(cat $MYSQL_ROOT_PASSWORD_FILE)
                  fi
                  mysqladmin status -uroot -p$password_aux
            initialDelaySeconds: 120
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - |
                  password_aux="${MYSQL_ROOT_PASSWORD:-}"
                  if [ -f "${MYSQL_ROOT_PASSWORD_FILE:-}" ]; then
                      password_aux=$(cat $MYSQL_ROOT_PASSWORD_FILE)
                  fi
                  mysqladmin status -uroot -p$password_aux
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          resources:
            limits: {}
            requests: {}
          volumeMounts:
            - name: data
              mountPath: /bitnami/mysql
            - name: config
              mountPath: /opt/bitnami/mysql/conf/my.cnf
              subPath: my.cnf
      volumes:
        - name: config
          configMap:
            name: stakater-nordmart-catalog-mysql-master
  volumeClaimTemplates:
    - metadata:
        name: data
        labels:
          app: mysql
          component: master
          release: stakater-nordmart-catalog
          heritage: Helm
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "8Gi"
