01-devtest/nordmart/dev/stakater-nordmart-promotion.yaml
---
# Source: helm/charts/application/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: promotion
    appVersion: "0.0.3"
    group: com.stakater.platform
    provider: stakater
    team: stakater
    chart: "application-0.0.29"
    release: "stakater-nordmart-promotion"
    heritage: "Helm"
  name: promotion
spec:
  selector:
    app: promotion
  ports:
    - name: https
      port: 8080
      targetPort: 8080
---
# Source: helm/charts/mysql/templates/master-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: promotion-sql
  labels:
    app: mysql
    chart: mysql-7.1.0
    release: stakater-nordmart-promotion
    heritage: Helm
    component: master
  annotations:
    prometheus.io/port: '9104'
    prometheus.io/scrape: "true"
spec:
  type: ClusterIP
  ports:
    - name: mysql
      port: 3306
      targetPort: mysql
      nodePort: null
  selector:
    app: mysql
    release: stakater-nordmart-promotion
    component: master
---
# Source: helm/charts/application/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: promotion
    appVersion: "0.0.3"
    group: com.stakater.platform
    provider: stakater
    team: stakater
    chart: "application-0.0.29"
    release: "stakater-nordmart-promotion"
    heritage: "Helm"
    appCategory: backend
  annotations: 
    reloader.stakater.com/auto: "true"
  name: promotion
spec:
  replicas: 2
  selector:
    matchLabels:
      app: promotion
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: promotion
    spec:      
      imagePullSecrets:
      - name: nexus-creds
      containers:
      - name: promotion
        image: "nexus-docker-openshift-stakater-nexus.apps.binero.06p407u4.kubeapp.cloud/repository/docker/stakater-nordmart-promotion:0.0.3"
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
          initialDelaySeconds: 90
          httpGet:
            path: /
            port: 8080
        readinessProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
          initialDelaySeconds: 90
          httpGet:
            path: /
            port: 8080
        resources:
          limits:
            memory: 1Gi
            cpu: 0.5
          requests:
            memory: 128Mi
            cpu: 0.1
      serviceAccountName: promotion
---
# Source: helm/charts/mysql/templates/master-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: promotion-sql-master
  labels:
    app: mysql
    chart: mysql-7.1.0
    release: stakater-nordmart-promotion
    heritage: Helm
    component: master
spec:
  selector:
    matchLabels:
      app: mysql
      release: stakater-nordmart-promotion
      component: master
  serviceName: promotion-sql-master
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: mysql
        chart: mysql-7.1.0
        release: stakater-nordmart-promotion
        heritage: Helm
        component: master
    spec:      
      imagePullSecrets:
        - name: nexus-proxy-secret
      serviceAccountName: promotion-sql
      containers:
        - name: mysql
          image: nexus-docker-proxy-openshift-stakater-nexus.apps.binero.06p407u4.kubeapp.cloud/bitnami/mysql:8.0.22-debian-10-r23
          imagePullPolicy: "IfNotPresent"
          ports:
            - name: mysql
              containerPort: 3306
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - |
                  password_aux="${MYSQL_ROOT_PASSWORD:-}"
                  if [ -f "${MYSQL_ROOT_PASSWORD_FILE:-}" ]; then
                      password_aux=$(cat $MYSQL_ROOT_PASSWORD_FILE)
                  fi
                  mysqladmin status -uroot -p$password_aux
            initialDelaySeconds: 120
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - |
                  password_aux="${MYSQL_ROOT_PASSWORD:-}"
                  if [ -f "${MYSQL_ROOT_PASSWORD_FILE:-}" ]; then
                      password_aux=$(cat $MYSQL_ROOT_PASSWORD_FILE)
                  fi
                  mysqladmin status -uroot -p$password_aux
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          resources:
            limits: {}
            requests: {}
          volumeMounts:
            - name: data
              mountPath: /bitnami/mysql
            - name: config
              mountPath: /opt/bitnami/mysql/conf/my.cnf
              subPath: my.cnf
      volumes:
        - name: config
          configMap:
            name: promotion-sql-master
  volumeClaimTemplates:
    - metadata:
        name: data
        labels:
          app: mysql
          component: master
          release: stakater-nordmart-promotion
          heritage: Helm
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "8Gi"
