01-devtest/nordmart/dev/stakater-nordmart-review.yaml
---
# Source: helm/charts/application/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: review
    appVersion: "v0.0.8"
    group: com.stakater.platform
    provider: stakater
    team: stakater
    chart: "application-0.0.29"
    release: "stakater-nordmart-review"
    heritage: "Helm"
  name: review
spec:
  selector:
    app: review
  ports:
    - name: https
      port: 8080
      targetPort: 8080
---
# Source: helm/charts/mongodb/templates/standalone/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: review-mongodb
  namespace: nordmart-dev
  labels:
    app.kubernetes.io/name: mongodb
    helm.sh/chart: mongodb-10.0.5
    app.kubernetes.io/instance: stakater-nordmart-review
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: mongodb
spec:
  type: ClusterIP
  ports:
    - name: mongodb
      port: 27017
      targetPort: mongodb
      nodePort: null
  selector:
    app.kubernetes.io/name: mongodb
    app.kubernetes.io/instance: stakater-nordmart-review
    app.kubernetes.io/component: mongodb
---
# Source: helm/charts/application/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: review
    appVersion: "v0.0.8"
    group: com.stakater.platform
    provider: stakater
    team: stakater
    chart: "application-0.0.29"
    release: "stakater-nordmart-review"
    heritage: "Helm"
    appCategory: backend
  annotations: 
    reloader.stakater.com/auto: "true"
  name: review
spec:
  replicas: 2
  selector:
    matchLabels:
      app: review
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: review
    spec:      
      imagePullSecrets:
      - name: nexus-creds
      containers:
      - name: review
        image: "nexus-docker-openshift-stakater-nexus.apps.binero.06p407u4.kubeapp.cloud/repository/docker/stakater-nordmart-review:v0.0.8"
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          periodSeconds: 60
          successThreshold: 1
          timeoutSeconds: 1
          initialDelaySeconds: 10
          httpGet:
            path: /health
            port: 8080
        readinessProbe:
          failureThreshold: 3
          periodSeconds: 60
          successThreshold: 1
          timeoutSeconds: 1
          initialDelaySeconds: 10
          httpGet:
            path: /health
            port: 8080
        resources:
          limits:
            memory: 1Gi
            cpu: 0.5
          requests:
            memory: 128Mi
            cpu: 0.1
      serviceAccountName: review
---
# Source: helm/charts/mongodb/templates/standalone/dep-sts.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: review-mongodb
  namespace: nordmart-dev
  labels:
    app.kubernetes.io/name: mongodb
    helm.sh/chart: mongodb-10.0.5
    app.kubernetes.io/instance: stakater-nordmart-review
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: mongodb
spec:
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: mongodb
      app.kubernetes.io/instance: stakater-nordmart-review
      app.kubernetes.io/component: mongodb
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mongodb
        helm.sh/chart: mongodb-10.0.5
        app.kubernetes.io/instance: stakater-nordmart-review
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: mongodb
    spec:
      
      serviceAccountName: review-mongodb
      containers:
        - name: mongodb
          image: docker.io/bitnami/mongodb:4.4.2-debian-10-r0
          imagePullPolicy: "IfNotPresent"
          ports:
            - name: mongodb
              containerPort: 27017
          livenessProbe:
            exec:
              command:
                - mongo
                - --eval
                - "db.adminCommand('ping')"
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          readinessProbe:
            exec:
              command:
                - mongo
                - --eval
                - "db.adminCommand('ping')"
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          resources:
            limits: {}
            requests: {}
          volumeMounts:
            - name: datadir
              mountPath: /bitnami/mongodb
              subPath: 
      volumes:
        - name: datadir
          persistentVolumeClaim:
            claimName: review-mongodb
