01-devtest/nordmart/dev/stakater-nordmart-gateway-vertx.yaml
---
# Source: helm/charts/application/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gateway
    appVersion: "v0.0.29"
    group: com.stakater.platform
    provider: stakater
    team: stakater
    chart: "application-0.0.30"
    release: "stakater-nordmart-gateway-vertx"
    heritage: "Helm"
  name: gateway
spec:
  selector:
    app: gateway
  ports:
    - name: https
      port: 8080
      targetPort: 8080
---
# Source: helm/charts/application/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gateway
    appVersion: "v0.0.29"
    group: com.stakater.platform
    provider: stakater
    team: stakater
    chart: "application-0.0.30"
    release: "stakater-nordmart-gateway-vertx"
    heritage: "Helm"
    appCategory: backend
  annotations: 
    reloader.stakater.com/auto: "true"
  name: gateway
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gateway
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: gateway
    spec:      
      imagePullSecrets:
      - name: nexus-creds
      containers:
      - name: gateway
        image: "nexus-docker-openshift-stakater-nexus.apps.binero.06p407u4.kubeapp.cloud/repository/docker/stakater-nordmart-gateway-vertx:v0.0.29"
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            memory: 256Mi
            cpu: 0.5
          requests:
            memory: 128Mi
            cpu: 0.1
      serviceAccountName: gateway
---
# Source: helm/charts/application/templates/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gateway
  labels:
    app: gateway
    appVersion: "v0.0.29"
    group: com.stakater.platform
    provider: stakater
    team: stakater
    chart: "application-0.0.30"
    release: "stakater-nordmart-gateway-vertx"
    heritage: "Helm"
spec:
  port:
    targetPort: http

  to:
    kind: Service
    name: gateway
    weight: 100
  wildcardPolicy: None
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
