01-devtest/nordmart/dev/stakater-nordmart-inventory.yaml
---
# Source: application/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: inventory
    appVersion: "v0.0.16"
    group: com.stakater
    provider: stakater
    team: nordmart
    chart: "application-0.0.29"
    release: "stakater-nordmart-inventory"
    heritage: "Helm"
  name: inventory
spec:
  selector:
    app: inventory
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
# Source: application/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: inventory
    appVersion: "v0.0.16"
    group: com.stakater
    provider: stakater
    team: nordmart
    chart: "application-0.0.29"
    release: "stakater-nordmart-inventory"
    heritage: "Helm"
  annotations: 
    reloader.stakater.com/auto: "true"
  name: inventory
spec:
  replicas: 2
  selector:
    matchLabels:
      app: inventory
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: inventory
      annotations:
        app: inventory
        team: nordmart
    spec:
      containers:
      - name: inventory
        image: "docker.io/stakater/stakater-nordmart-inventory:v0.0.16"
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          periodSeconds: 60
          successThreshold: 1
          timeoutSeconds: 1
          initialDelaySeconds: 15
          httpGet:
            path: /actuator/health
            port: 8080
        readinessProbe:
          failureThreshold: 3
          periodSeconds: 60
          successThreshold: 1
          timeoutSeconds: 1
          initialDelaySeconds: 15
          httpGet:
            path: /actuator/health
            port: 8080
        resources:
          limits:
            memory: 256Mi
            cpu: 0.5
          requests:
            memory: 128Mi
            cpu: 0.1
      serviceAccountName: inventory
---
# Source: application/templates/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: inventory
  labels:
    app: inventory
    appVersion: "v0.0.16"
    group: com.stakater
    provider: stakater
    team: nordmart
    chart: "application-0.0.29"
    release: "stakater-nordmart-inventory"
    heritage: "Helm"
    router: default
spec:
  port:
    targetPort: http

  to:
    kind: Service
    name: inventory
    weight: 100
  wildcardPolicy: None
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
