01-devtest/nordmart/dev/stakater-nordmart-web.yaml
---
# Source: helm/charts/application/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web
    appVersion: "v0.0.42"
    group: com.stakater.platform
    provider: stakater
    team: stakater
    chart: "application-0.0.29"
    release: "stakater-nordmart-web"
    heritage: "Helm"
  name: web
spec:
  selector:
    app: web
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 4200
---
# Source: helm/charts/application/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web
    appVersion: "v0.0.42"
    group: com.stakater.platform
    provider: stakater
    team: stakater
    chart: "application-0.0.29"
    release: "stakater-nordmart-web"
    heritage: "Helm"
    appCategory: frontend
  annotations: 
    reloader.stakater.com/auto: "true"
  name: web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: web
    spec:      
      imagePullSecrets:
      - name: nexus-creds
      containers:
      - name: web
        image: "nexus-docker-openshift-stakater-nexus.apps.binero.06p407u4.kubeapp.cloud/repository/docker/stakater-nordmart-web:v0.0.42"
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
          initialDelaySeconds: 10
          httpGet:
            path: /health
            port: 4200
        readinessProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
          initialDelaySeconds: 10
          httpGet:
            path: /health
            port: 4200
        resources:
          limits:
            memory: 256Mi
            cpu: 0.5
          requests:
            memory: 128Mi
            cpu: 0.1
      serviceAccountName: web
---
# Source: helm/charts/application/templates/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: web
  labels:
    app: web
    appVersion: "v0.0.42"
    group: com.stakater.platform
    provider: stakater
    team: stakater
    chart: "application-0.0.29"
    release: "stakater-nordmart-web"
    heritage: "Helm"
spec:
  port:
    targetPort: http

  to:
    kind: Service
    name: web
    weight: 100
  wildcardPolicy: None
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
